[package]
name = "tracing_log_error"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LukeMathWalker/tracing_log_error"
description = "A set of helpers to capture rich error context in tracing logs"
keywords = ["tracing", "telemetry", "logging", "error-handling"]

[dependencies]
tracing = "0.1.41"

[dev-dependencies]
anyhow = "1"
